# ai-work-summary-assistant

./: .pre-commit-config.yaml  LICENSE  README.md  celery_run.py  django_run.py  pyproject.toml
app/: config.py  main.py
app/api/: schemas.py
app/models/: text_generation.py
app/routers/: text_generation.py
django_app/config/: __init__.py  celery.py  settings.py  urls.py
django_app/reports/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
django_app/users/: models.py  serializers.py  tests.py  urls.py  views.py
docs/: prd.md
frontend/src/api/: auth.js  index.js
